--- a/views/add-club.handlebars
+++ b/views/add-club.handlebars
@@ -1,4 +1,5 @@
 {{!-- Form to add a new club --}}
+<h1 class="heading">Create a New Club</h1>
 <div class="container form_new_club">
   <div class="row">
     <form class="col s12">
