--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,14 +19,14 @@
     <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Reel Talk</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="/">Home</a></li>
-        <li><a href="add-club">New Club</a></li>
-        <li><a href="add-movie">New Discussion</a></li>
+        <li><a href="/add-club">New Club</a></li>
+        <li><a href="/add-movie">New Discussion</a></li>
       </ul>
 
       <ul id="nav-mobile" class="sidenav">
         <li><a href="/">Home</a></li>
-        <li><a href="add-club">New Club</a></li>
-        <li><a href="add-movie">New Discussion</a></li>
+        <li><a href="/add-club">New Club</a></li>
+        <li><a href="/add-movie">New Discussion</a></li>
       </ul>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     </div>
@@ -34,14 +34,12 @@
 
   <div class="main">
     <div class="main-body">
-      {{!-- <div class="wrapper"> --}}
         <div class="backdrop"></div>
 
           {{{body}}}
 
         <div class="lamp"></div>
         <div class="lamp2"></div>
-      {{!-- </div> --}}
     </div>
 
     <div class="footer-copyright orange">
