--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,7 +16,9 @@
 
 <body class="grey darken-4">
   <nav class="red darken-4" role="navigation">
-    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Reel Talk</a>
+    <div class="nav-wrapper container">
+      <img class="reel-img">
+      <a id="logo-container" href="#" class="brand-logo">Reel Talk</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="/">Home</a></li>
         <li><a href="/add-club">New Club</a></li>
