--- a/views/partials/post-card.handlebars
+++ b/views/partials/post-card.handlebars
@@ -4,13 +4,14 @@
 
         <ul>
             <div class="row single-post">
+                <div class="profile col l1">
+                    <i class="fas fa-user-circle fa-4x"></i>
+                </div>
                 <div class="col l8 s8">
-                    <h4 class="black-text">Post Title: {{title}} </h4>
-                    <h5>User's text:</h5>
-                    <p>{{text}}</p>
+                    <h5 class="black-text">Post Title: {{title}} </h5>
+                    <p>User's text: {{text}}</p>
                 </div>
             </div>
         </ul>
     </div>
 </div>
-
