--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,9 +16,11 @@
 
 <body class="grey darken-4">
   <nav class="red darken-4" role="navigation">
+      {{!-- <div class="col l1 s1 offset-1 reel-img">
+      </div> --}}
     <div class="nav-wrapper container">
-      <img class="reel-img">
-      <a id="logo-container" href="#" class="brand-logo">Reel Talk</a>
+      <a id="logo-container" href="#" class="brand-logo">
+        <i class="material-icons">local_movies</i>Reel Talk</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="/">Home</a></li>
         <li><a href="/add-club">New Club</a></li>
@@ -30,7 +32,7 @@
         <li><a href="/add-club">New Club</a></li>
         <li><a href="/add-movie">New Discussion</a></li>
       </ul>
-      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+      <a href="" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     </div>
   </nav>
 
