--- a/views/discussion.handlebars
+++ b/views/discussion.handlebars
@@ -27,25 +27,27 @@
 
 {{!-- Form to add a comment post req to database --}}
 <div class="container form_post">
-  <div class="row">
-    <form class="col s12">
-      <div class="row">
-        <div class="input-field col s6">
-          <input placeholder="My Post Name" id="post_title" type="text" class="validate">
-          <label for="first_name">Post Tite</label>
-        </div>
+  <form class="post_form">
+    <div class="row">
+      <div class="input-field col s6">
+        <input placeholder="My Post Name" id="post_title" type="text" class="validate">
+        <label for="first_name">Post Tite</label>
       </div>
-      <div class="row">
-        <div class="input-field col s12">
-          <textarea placeholder="My thoughts on this movie were..." id="post_text" class="materialize-textarea"></textarea>
-          <label for="textarea1">Thoughts?</label>
-        </div>
+      <div class="input-field col s6">
+        <input placeholder="User ID" id="user_id" type="text" class="validate">
+        <label for="first_name">User ID</label>
       </div>
-      <button class="btn waves-effect waves-light" id="submit_post" type="submit" name="action">Submit
-        <i class="material-icons right">send</i>
-      </button>
-    </form>
-  </div>
+    </div>
+    <div class="row">
+      <div class="input-field col s12">
+        <textarea placeholder="My thoughts on this movie were..." id="post_text" class="materialize-textarea"></textarea>
+        <label for="textarea1">Thoughts?</label>
+      </div>
+    </div>
+    <button class="btn waves-effect waves-light" id="submit_post" type="submit" name="action">Submit
+      <i class="material-icons right">send</i>
+    </button>
+  </form>
 </div>
 
 
