--- a/views/add-club.handlebars
+++ b/views/add-club.handlebars
@@ -8,11 +8,16 @@
           <input placeholder="New Club Name" id="new_club" type="text" class="validate">
           <label for="club_name">Club Name</label>
         </div>
+        <div class="input-field col s6">
+          <input placeholder="New Club Name" id="new_admin" type="text" class="validate">
+          <label for="club_admin">Club Administrator</label>
+        </div>
       </div>
       <div class="row">
         <div class="input-field col s12">
-          <textarea id="textarea1" class="materialize-textarea"></textarea>
-          <label for="new_club_description"> Please  provide a briefdescription of what this club will be focusing on </label>
+          <textarea id="new_club_description" class="materialize-textarea"></textarea>
+          <label for="new_club_description"> Please provide a briefdescription of what this club will be focusing on
+          </label>
         </div>
       </div>
       <button class="btn waves-effect waves-light" type="submit" id="add_club_btn" name="action">Add Club
