--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -57,6 +57,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script src="/js/index.js"></script>
   <script src="/js/post.js"></script>
+  <script src="/js/club.js"></script>
 
 </body>
 
