--- a/views/club.handlebars
+++ b/views/club.handlebars
@@ -17,5 +17,12 @@
     {{/each }}
     </ul>
 
+    {{!-- ADD NEW DISCUSSION --}}
+<div class="new_disc_btn center-align">
+      <button class="btn waves-effect waves-light" type="submit" id="add_disc_btn" name="action">Create New Discussion
+    <i class="far fa-comments"></i>
+    </div>
+
+
 <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script src="/js/club.js"></script>
