username and uid from firbase are added to sessionStorage

--- a/views/index-2.handlebars
+++ b/views/index-2.handlebars
@@ -73,8 +73,8 @@ firebase.auth().onAuthStateChanged(user => {
     };
   $.post("api/user/", userInfo).then( function(res) {
     console.log(res);
-
   });
+  sessionStorage.setItem("loggedInUser", JSON.stringify(userInfo));
   }
 });
 </script>
