--- a/views/add-movie.handlebars
+++ b/views/add-movie.handlebars
@@ -53,6 +53,6 @@
         <p id="confirm-end-date"></p>
     </div>
     <div class="modal-footer">
-        <a href="#!" class="modal-close waves-effect waves-green btn-flat">That's my movie!</a>
+        <a href="#!" id="add_discussion_btn" class="modal-close waves-effect waves-green btn-flat">That's my movie!</a>
     </div>
 </div>
