--- a/views/discussion.handlebars
+++ b/views/discussion.handlebars
@@ -31,7 +31,7 @@
     <div class="row">
       <div class="input-field col s6">
         <input placeholder="My Post Name" id="post_title" type="text" class="validate">
-        <label for="first_name">Post Tite</label>
+        <label for="first_name">Post Title</label>
       </div>
       <div class="input-field col s6">
         <input placeholder="User ID" id="user_id" type="text" class="validate">
