--- a/views/add-movie.handlebars
+++ b/views/add-movie.handlebars
@@ -10,27 +10,27 @@
     <form class="col s12">
       <div class="row">
         <div class="input-field col s6">
-          <input id="new_movie" type="text" class="validate">
+          <input id="new_movie" type="text" class="validate white-text">
           <label for="club_name">Movie Name</label>
         </div>
         <div class="input-field col s6">
-          <input id="new_disc" type="text" class="validate">
+          <input id="new_disc" type="text" class="validate white-text">
           <label for="club_name">Discussion Topics</label>
         </div>
       </div>
       <div class="row">
         <div class="input-field col s12">
-          <textarea id="textarea1" class="materialize-textarea"></textarea>
+          <textarea id="textarea1" class="materialize-textarea white-text validate"></textarea>
           <label for="new_club_description"> Brief description of what this club will be discussing </label>
         </div>
       </div>
       <div class="row">
           <div class="start-date col l6 s12">
-               <input type="text" class="datepicker">
+               <input type="text" class="datepicker validate">
                <label for="dtp">Start Date</label>
           </div>
           <div class="end-date col l6 s12"> 
-               <input type="text" class="datepicker">
+               <input type="text" class="datepicker validate">
                 <label for="dtp">End Date</label>
           </div>
       </div>
