--- a/views/add-movie.handlebars
+++ b/views/add-movie.handlebars
@@ -18,6 +18,13 @@
           <label for="club_name">Year</label>
         </div>
       </div>
+    <div class="row">
+        <div class="input-field col s12">
+            <textarea id="discussion-title" class="materialize-textarea"></textarea>
+            <label for="new_club_description"> Please provide a title for your movie discussion
+            </label>
+        </div>
+    </div>
       <div class="row">
         <div class="input-field col s12">
           <textarea id="movie-description" class="materialize-textarea"></textarea>
@@ -48,6 +55,7 @@
         <p id="confirm-movie-year"></p>
         <p id="confirm-movie-plot"></p>
         <div class="poster"></div>
+        <p id="confirm-discussion-title"></p>
         <p id="confirm-discussion"></p>
         <p id="confirm-start-date"></p>
         <p id="confirm-end-date"></p>
