--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -139,6 +139,7 @@ align-content: center;
   to { width: 100% }
 }
 
+
 .main-col{
 background-color: #d1d2d4;
 }
@@ -184,6 +185,11 @@ background-color: #d1d2d4;
 .main-body{
   margin-top:3%;
   margin-bottom: 15%;
+  padding-bottom: 20px;
+}
+
+.logged-in-nav{
+  padding-left: 10px;
 }
 
 .footer-copyright{
@@ -324,7 +330,6 @@ background-color: #d1d2d4;
       letter-spacing: .15em; /* Adjust as needed */
     }
   }
-
 
   /* Desktop Spotlights */
   @media screen and (min-width: 980px){
