added responsive classes to discussion title input

--- a/views/add-movie.handlebars
+++ b/views/add-movie.handlebars
@@ -20,7 +20,7 @@ Moderator/Logged In User --}}
       </div>
       <div class="row">
         <div class="input-field col s12">
-          <textarea id="discussion-title" class="materialize-textarea"></textarea>
+          <textarea id="discussion-title" class="materialize-textarea white-text validate"></textarea>
           <label for="new_club_description"> Please provide a title for your movie discussion
           </label>
         </div>
