--- a/views/add-club.handlebars
+++ b/views/add-club.handlebars
@@ -5,7 +5,7 @@
     <form class="col s12">
       <div class="row">
         <div class="input-field col s12">
-          <input placeholder="New Club Name" id="new_club" type="text" class="validate">
+          <input id="new_club" type="text" class="validate white-text">
           <label for="club_name">Club Name</label>
         </div>
       </div>
