minor changes to style sheet

--- a/views/add-movie.handlebars
+++ b/views/add-movie.handlebars
@@ -28,7 +28,7 @@ Moderator/Logged In User --}}
       <div class="row">
         <div class="input-field col s12">
           <textarea id="movie-description" class="materialize-textarea white-text validate"></textarea>
-          <label for="new_club_description"> Please provide a brief description of what this club will be focusing on
+          <label for="new_club_description"> Please provide a brief description of what this movie discussion will be focusing on
           </label>
         </div>
       </div>
