--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -248,8 +248,13 @@ li{
 
 .main-body{
   margin-top:3%;
-  margin-bottom: 15%;
   padding-bottom: 20px;
+  padding-bottom: 80px;
+}
+
+.main {
+  min-height: 100vh;
+  position: relative;
 }
 
 .logged-in-nav{
@@ -257,13 +262,10 @@ li{
 }
 
 .footer-copyright{
-  position: relative;
+  position: absolute;
   right: 0;
   bottom: 0;
   left: 0;
-  margin-top: 120px;
-  padding-top: 20px;
-  padding-bottom: 20px;
   text-align: center;
   width: 100%;
   height: 60px;
