--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,27 +15,32 @@
 </head>
 
 <body class="grey darken-4">
-  <nav class="red darken-4" role="navigation">
-    {{!-- <div class="col l1 s1 offset-1 reel-img">
-    </div> --}}
-    <div class="nav-wrapper container">
-      <a id="logo-container" href="/" class="brand-logo">
-        Reel Talk</a>
-      <ul class="right hide-on-med-and-down">
-        <li><a href="/about">About the App</a></li>
-        <li><a href="/add-club">  New Club</a></li>
-        <li class="logged-in-nav">Logged in as: </li>
-      </ul>
-
-      <ul id="nav-mobile" class="sidenav">
-        <li><a href="/about">About the App</a></li>
-        <li><a href="/add-club">New Club</a></li>
-      </ul>
-      <a href="" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-    </div>
-  </nav>
-
   <div class="main">
+    <nav class="red darken-4" role="navigation">
+      {{!-- <div class="col l1 s1 offset-1 reel-img">
+      </div> --}}
+      <div class="nav-wrapper">
+        <a id="logo-container" href="/" class="brand-logo">
+          Reel Talk</a>
+        <ul class="right hide-on-med-and-down" id="navbar">
+          <li><a href="/about">About the App</a></li>
+          <li><a href="/add-club"> New Club</a></li>
+          <li>Username: </li>
+          <li class="logged-in-nav"></li>
+        </ul>
+
+
+
+        <ul id="nav-mobile" class="sidenav">
+          <li><a href="/add-club">New Club</a></li>
+        </ul>
+        <a href="" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+      </div>
+    </nav>
+
+
+
+
     <div class="main-body">
       <div class="backdrop"></div>
 
@@ -55,11 +60,10 @@
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
-  
-  <script src="js/omdb.js"></script>
   <script src="/js/index.js"></script>
   <script src="/js/post.js"></script>
   <script src="/js/club.js"></script>
+  <script src="/js/omdb.js"></script>
 
 </body>
 
