fix styling on modal

--- a/views/add-movie.handlebars
+++ b/views/add-movie.handlebars
@@ -15,7 +15,7 @@ Moderator/Logged In User --}}
     <p id="confirm-end-date"></p>
   </div>
   <div class="modal-footer">
-    <a href="#!" id="add_discussion_btn" class="modal-close waves-effect waves-green btn-flat">That's my movie!</a>
+    <a href="#!" id="add_discussion_btn" class="modal-close waves-effect waves-yellow btn-flat">That's my movie!</a>
   </div>
 </div>
 
