--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -459,3 +459,15 @@ li{
       }
     }
   }
+
+.modal {
+  text-align: center;
+}
+
+.modal .modal-footer {
+  text-align: center;
+}
+
+.modal-content {
+  font-size: 20px;
+}
