--- a/views/partials/post-card.handlebars
+++ b/views/partials/post-card.handlebars
@@ -8,8 +8,8 @@
                     <i class="fas fa-user-circle fa-4x"></i>
                 </div>
                 <div class="col l8 s8">
-                    <h5 class="black-text">Post Title: {{title}} </h5>
-                    <p>User's text: {{text}}</p>
+                    <h5 class="black-text">{{poster}}</h5>
+                    <p>{{text}}</p>
                 </div>
             </div>
         </ul>
