--- a/views/partials/discussion-card.handlebars
+++ b/views/partials/discussion-card.handlebars
@@ -4,7 +4,7 @@
         <div class="col l1 s1 offset-1 film-strip">
         </div>
         <div class="col l11 s11 disc-col">
-            <h4 class="black-text">{{title}} </h4>
+            <h4 class="black-text">{{movie}} </h4>
             <h5>Description:</h5>
             <p>{{text}}</p>
         </div>
