tweaking about page styling

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -64,13 +64,26 @@ align-content: center;
 
 .about{
   padding:3%;
-  background-color: rgba(101, 112, 117, 0.8);
+  background-color: rgba(255, 255, 255, 0.6);
   border-radius: 25px;
 }
 
 #about-heading{
   text-align: center;
   font-family: 'Limelight', cursive;
+  margin-bottom: 0;
+}
+
+#about_sub{
+  text-align: center;
+  font-family: 'Quicksand', sans-serif;
+  line-height: 1.5;
+  padding-bottom: 35px;
+  margin-top: 0;
+}
+
+#about_para{
+  font-size: 22px;
 }
 
 ::placeholder { 
