--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -1,18 +1,18 @@
 <div class="container">
     <div class="about">
-        <h2 id="about-heading">About This Application</h2>
+        <h2 id="about-heading">About</h2>
         <br>
-        <p>Reel Talk is an application focused on bringing movie lovers together to discuss plot themes, writing,
-            directingf - basically all things film.</p>
-        <h3 id="about-heading">How to use this application:</h3>
-        <p>To enjoy the full functionality of this site, click the login button to link your gmail account to your user
+        <h4 id="about_sub">Reel Talk is an application focused on bringing movie lovers together to discuss plot themes, writing,
+            directing, acting and all things cinema.</h4>
+        <h3 id="about-heading">How to use this application</h3>
+        <p id="about_para">To enjoy the full functionality of this site, click the login button to link your gmail account to your user
             experience. </p>
-        <p>The home page displays different movie clubs that focus on a wide variety of cinematic themes. Clicking on a
+        <p id="about_para">The home page displays different movie clubs that focus on a wide variety of cinematic themes. Clicking on a
             club will direct you to the club's main page where you can view ongoing and previous movie discussions.</p>
-        <p>Once you have clicked on the movie discussion of your choice, the page will display details about the movie,
+        <p id="about_para">Once you have clicked on the movie discussion of your choice, the page will display details about the movie,
             followed by all participating users' thoughts and perspectives on the film and discussion theme. </p>
-        <p>To add your thoughts on the movie, fill out the form below and click submit to share!</p>
-        <p>Users can also create new movie clubs to focus on a theme they find compelling by selecting the "New Club"
+        <p id="about_para">To add your thoughts on the movie, fill out the form below and click submit to share!</p>
+        <p id="about_para">Users can also create new movie clubs to focus on a theme they find compelling by selecting the "New Club"
             link found on the navbar, and can create new discussions within any club they are members of by navigating
             to the club page and selecting the "Create New Discussion" button beneath the list of discussions.</p>
     </div>
