validation for add movie

--- a/views/add-movie.handlebars
+++ b/views/add-movie.handlebars
@@ -58,7 +58,7 @@ Moderator/Logged In User --}}
       <input type="text" class="datepicker validate" id="end-date">
       <label for="dtp">End Date</label>
     </div>
-
+    <p class="hide" id="invalidAlert">Some required fields have been left blank.</p>
     <button data-target="modal1" class="btn waves-effect waves-light modal-trigger" type="submit" id="add_movie_btn">Add
       Movie!
       <i class="fas fa-video"></i>
