user validation for new club page

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,6 +9,13 @@ p{
   font-family: 'Quicksand', sans-serif;
 }
 
+.hide {
+  display: none;
+}
+
+#invalidAlert {
+  color: red;
+}
 .icon-block .material-icons {
   font-size: inherit;
 }
