--- a/views/add-club.handlebars
+++ b/views/add-club.handlebars
@@ -16,9 +16,13 @@
           </label>
         </div>
       </div>
+      <p class="hide" id="invalidAlert">*Input fields cannot be left blank</p>
       <button class="btn waves-effect waves-light" type="submit" id="add_club_btn" name="action">Add Club
         <i class="material-icons right">send</i>
       </button>
     </form>
   </div>
 </div>
+
+<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script src="/js/club.js"></script>
