--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,7 +28,7 @@
       <ul class="sidenav" id="mobile-demo">
         <li><a href="/about">About the App</a></li>
         <li><a href="/add-club"> New Club</a></li>
-        <li class="logged-in-nav">Logged in as: </li>
+        <li>Logged in as: <div class="logged-in-nav"></div></li>
       </ul>
       <a href="#" data-activates="mobile-demo" class="button-collapse sidenav-trigger"><i class="material-icons">menu</i></a>
 
