fix cards and discussions

--- a/views/discussion.handlebars
+++ b/views/discussion.handlebars
@@ -8,6 +8,8 @@
       <div class="showing-info">
         <h3>{{userComment.movie}}</h3>
         <img class="responsive-img poster" src={{userComment.moviePoster}}>
+        <h5>{{userComment.title}}</h5>
+        <p>{{userComment.text}}</p>
         <h5>Discussion Starts:</h5>
         <p>{{userComment.startDate}}</p>
         <h5>Discussion Ends:</h5>
