--- a/views/partials/discussion-card.handlebars
+++ b/views/partials/discussion-card.handlebars
@@ -5,7 +5,7 @@
         </div>
         <div class="col l11 s11 disc-col">
             <h4 class="black-text">{{movie}} </h4>
-            <h5>Description:</h5>
+            <h5>{{title}}</h5>
             <p>{{text}}</p>
         </div>
     </div>
